--- a/recipes/yakisoba-chicken.html
+++ b/recipes/yakisoba-chicken.html
@@ -4,8 +4,39 @@
         <meta charset="utf-8">
         <title>Yakisoba Chicken</title>
     </head>
+
     <body>
-        <h1>Yakisoba Chicken</h1>
+        <h1><strong>Yakisoba Chicken</strong></h1>
         <img src="../imgs/yakisoba-chicken.webp">
+        <h2>Japanese noodles with chicken. YUM!!</h2>
+        <p>This is a simple single skillet recipe that should be done in about 30 min.</p>
+
+        <p>These Japanese buckwheat flour noodles can be found in your local Asian food market. </p>
+
+        <h3><strong>Ingredients</strong></h3>
+            <ul>
+                <li>½ teaspoon sesame oil</li>
+                <li>1 tablespoon canola oil</li>
+                <li>2 tablespoons chile paste</li>
+                <li>2 cloves garlic, chopped</li>
+                <li>4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+                <li>½ cup soy sauce</li>
+                <li>1 onion, sliced lengthwise into eighths</li>
+                <li>1 onion, sliced lengthwise into eighths</li>
+                <li>2 carrots, coarsely chopped</li>
+                <li>2 carrots, coarsely chopped</li>
+            </ul>
+        <h3><strong>Directions</strong></h3>
+            <ol>
+                <li>In a large skillet combine sesame oil, canola oil and chili paste; stir-fry 30 seconds. </li>
+                <li>Add garlic and stir fry an additional 30 seconds. </li>
+                <li>Add chicken and 1/4 cup of the soy sauce and stir fry until chicken is no longer pink, about 5 minutes.</li>
+                <li>Remove mixture from pan, set aside, and keep warm.</li>
+                <li>In the emptied pan combine the onion, cabbage, and carrots.</li>
+                <li>Stir-fry until cabbage begins to wilt, 2 to 3 minutes.</li>
+                <li>Stir in the remaining soy sauce, cooked noodles, and the chicken mixture to pan and mix to blend.</li>
+                <li>Serve and enjoy!</li>
+            </ol>
+
     </body>
 </html>
