--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/yakisoba-chicken.html">Yakisoba Chicken</a></li>
-            <li><a href="recipes/lazy-guac.html"></a></li>
+            <li><a href="recipes/lazy-guac.html">Lazy Guacamole</a></li>
 
         </ul>    
     </body>
