Add alt text to images
Added alt text to lazy-guac.html and yakisoba-chicken.html images

--- a/recipes/yakisoba-chicken.html
+++ b/recipes/yakisoba-chicken.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1><strong>Yakisoba Chicken</strong></h1>
-        <img src="../imgs/yakisoba-chicken.webp">
+        <img src="../imgs/yakisoba-chicken.webp" alt="a bowl of noodles with chicken">
         <h2>Japanese noodles with chicken. YUM!!</h2>
         <p>This is a simple single skillet recipe that should be done in about 30 min.</p>
 
