--- a/recipes/lazy-guac.html
+++ b/recipes/lazy-guac.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1><strong>Lazy Guacamole</strong></h1>
-        <img src="../imgs/lazy-guac-pic.jpeg">
+        <img src="../imgs/lazy-guac-pic.jpeg" alt="guacamole in an avacado hull">
 
         <h2><strong>No mess quick and easy guacamole</strong></h2>
         <p>This recipe is great for camping or those times when you want to wash the least amount of dishes possible</p>
@@ -33,7 +33,7 @@
             <ul>
                 <li>Roll the lime between your palm and a hard surface while pressing to help release the juices</li>
                 <li>Instead of chips try substituting veggies like carrots and celery</li>
-                
+
             </ul>
     </body>
 </html>
