--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/yakisoba-chicken.html">Yakisoba Chicken</a></li>
             <li><a href="recipes/lazy-guac.html">Lazy Guacamole</a></li>
+            <li><a href="recipes/apple-cin-oats.html">Apple Cinnamon Oatmeal</a></li>
 
         </ul>    
     </body>
