--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/yakisoba-chicken.html">Yakisoba Chicken</a></li>
-            <li><a href="recipes/lazy-guac.html">Lazy Guacamole</a></li>
-            <li><a href="recipes/apple-cin-oats.html">Apple Cinnamon Oatmeal</a></li>
+            <li><a href="recipes/yakisoba-chicken.html" target="_blank" rel="noopener noreferrer">Yakisoba Chicken</a></li>
+            <li><a href="recipes/lazy-guac.html" target="_blank" rel="noopener noreferrer">Lazy Guacamole</a></li>
+            <li><a href="recipes/apple-cin-oats.html" target="_blank" rel="noopener noreferrer">Apple Cinnamon Oatmeal</a></li>
 
         </ul>    
     </body>
