--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <li><a href="recipes/lazy-guac.html" target="_blank" rel="noopener noreferrer">Lazy Guacamole</a></li>
             <li><a href="recipes/apple-cin-oats.html" target="_blank" rel="noopener noreferrer">Apple Cinnamon Oatmeal</a></li>
 
-        </ul>    
+        </ul>   
+        
+        <h2>For additional recipes follow the link below</h2>
+            <p><a href="https://www.allrecipes.com/" target="_blank" rel="noopener noreferrer">Click Here</a></p>
+            
     </body>
 </html>
