--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/yakisoba-chicken.html" target="_blank" rel="noopener noreferrer">Yakisoba Chicken</a></li>
-            <li><a href="recipes/lazy-guac.html" target="_blank" rel="noopener noreferrer">Lazy Guacamole</a></li>
-            <li><a href="recipes/apple-cin-oats.html" target="_blank" rel="noopener noreferrer">Apple Cinnamon Oatmeal</a></li>
+            <li class="link"><a href="recipes/yakisoba-chicken.html" target="_blank" rel="noopener noreferrer">Yakisoba Chicken</a></li>
+            <li class="link"><a href="recipes/lazy-guac.html" target="_blank" rel="noopener noreferrer">Lazy Guacamole</a></li>
+            <li class="link"><a href="recipes/apple-cin-oats.html" target="_blank" rel="noopener noreferrer">Apple Cinnamon Oatmeal</a></li>
 
         </ul>   
         
-        <h2>For additional recipes follow the link below</h2>
-            <p><a href="https://www.allrecipes.com/" target="_blank" rel="noopener noreferrer">Click Here</a></p>
+        <h2 class="index">For additional recipes follow the link below</h2>
+            <p id="ext-link"><a href="https://www.allrecipes.com/" target="_blank" rel="noopener noreferrer">Click Here</a></p>
             
     </body>
 </html>
