--- a/recipes/apple-cin-oats.html
+++ b/recipes/apple-cin-oats.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Apple Cinnamon Oatmeal</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1><strong>Apple Cinnamon Oatmeal</strong></h1>
+        <h1 class="recipe-title"><strong>Apple Cinnamon Oatmeal</strong></h1>
         <img src="../imgs/oatmeal.jpeg" alt="a bowl of oatmeal with diced apples" width="300" height="420">
 
         <h2><strong>Add some flavor to your morning oats</strong></h2>
@@ -14,11 +15,11 @@
 
         <h3><strong>Ingredients</strong></h3>
             <ul>
-                <li>Oatmeal of your choice</li>
-                <li>1/2 apple</li>
-                <li>cinnamon</li>
-                <li>1 tbsp. butter</li>
-                <li>1 tbsp. brown sugar</li>
+                <li class="u-list">Oatmeal of your choice</li>
+                <li class="u-list">1/2 apple</li>
+                <li class="u-list">cinnamon</li>
+                <li class="u-list">1 tbsp. butter</li>
+                <li class="u-list">1 tbsp. brown sugar</li>
             </ul>
 
         <h3><strong>Directions</strong></h3>
