--- a/recipes/lazy-guac.html
+++ b/recipes/lazy-guac.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Lazy Guacomale</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1><strong>Lazy Guacamole</strong></h1>
+        <h1 class="recipe-title"><strong>Lazy Guacamole</strong></h1>
         <img src="../imgs/lazy-guac-pic.jpeg" alt="guacamole in an avacado hull" width="500" height="368">
 
         <h2><strong>No mess quick and easy guacamole</strong></h2>
@@ -14,9 +15,9 @@
 
         <h3><strong>Ingredients</strong></h3>
             <ul>
-                <li>1 avacado</li>
-                <li>1 key lime</li>
-                <li>Tajin</li>
+                <li class="u-list">1 avacado</li>
+                <li class="u-list">1 key lime</li>
+                <li class="u-list">Tajin</li>
             </ul>
 
         <h3><strong>Directions</strong></h3>
