--- a/recipes/yakisoba-chicken.html
+++ b/recipes/yakisoba-chicken.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Yakisoba Chicken</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
 
     <body>
-        <h1><strong>Yakisoba Chicken</strong></h1>
+        <h1 class="recipe-title"><strong>Yakisoba Chicken</strong></h1>
         <img src="../imgs/yakisoba-chicken.webp" alt="a bowl of noodles with chicken" width="750" height="563">
         <h2>Japanese noodles with chicken. YUM!!</h2>
         <p>This is a simple single skillet recipe that should be done in about 30 min.</p>
@@ -15,16 +16,16 @@
 
         <h3><strong>Ingredients</strong></h3>
             <ul>
-                <li>½ teaspoon sesame oil</li>
-                <li>1 tablespoon canola oil</li>
-                <li>2 tablespoons chile paste</li>
-                <li>2 cloves garlic, chopped</li>
-                <li>4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
-                <li>½ cup soy sauce</li>
-                <li>1 onion, sliced lengthwise into eighths</li>
-                <li>1 onion, sliced lengthwise into eighths</li>
-                <li>2 carrots, coarsely chopped</li>
-                <li>2 carrots, coarsely chopped</li>
+                <li class="u-list">½ teaspoon sesame oil</li>
+                <li class="u-list">1 tablespoon canola oil</li>
+                <li class="u-list">2 tablespoons chile paste</li>
+                <li class="u-list">2 cloves garlic, chopped</li>
+                <li class="u-list">4 skinless, boneless chicken breast halves - cut into 1 inch cubes</li>
+                <li class="u-list">½ cup soy sauce</li>
+                <li class="u-list">1 onion, sliced lengthwise into eighths</li>
+                <li class="u-list">1 onion, sliced lengthwise into eighths</li>
+                <li class="u-list">2 carrots, coarsely chopped</li>
+                <li class="u-list">2 carrots, coarsely chopped</li>
             </ul>
         <h3><strong>Directions</strong></h3>
             <ol>
